src/App.css
* {
	box-sizing: border-box;
}

body {
	font-family: Arial, Helvetica, sans-serif;
	margin: 0;
	background-color: #66e0ff;
}

.header {
	padding: 15px;
	text-align: center;
	background: black;
	color: white;
}

.header h1 {
	font-size: 40px;
}

.navbar {
  overflow: hidden;
  background-color: #333;
}

.navbar a {
  float: left;
  display: block;
  color: white;
  text-align: center;
  padding: 14px 20px;
  text-decoration: none;
}

.navbar a:hover {
	background-color: white;
	color: black;
}

.navbar a.active {
  background-color: #66e0ff;
  color: black;
}

.about-container {
	padding: 40px;
}

.image-container {
	float: left;
	text-align: center;
	width: 49%;
}

.image-container img {
	border-radius: 300px;
	height: 400px;
}

.intro-container {
	float: right;
	text-align: center;
	width: 49%;
	padding-top: 100px;
}

.intro-container p {
	font-size: 25px;
}

.contact-container {
	padding: 30px;
	font-size: 30px;
}

.social-links {
	padding: 0px 10px;
	word-wrap: normal;
	display: inline-block;
}

